[project]
name = "quant-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arch>=7.2.0",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.1.0",
    "ruff>=0.15.11",
    "scikit-learn>=1.8.0",
    "scipy>=1.15.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "yfinance>=1.3.0",
]
